vbank mvp completed
